/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.skywalking.apm.collector.remote.grpc.proto";

service RemoteCommonService {
    rpc call (stream RemoteMessage) returns (Empty) {
    }
}

message RemoteMessage {
    int32 graphId = 1;
    int32 nodeId = 2;
    int32 remoteDataId = 3;
    RemoteData remoteData = 4;
}

message RemoteData {
    repeated string dataStrings = 1;
    repeated int64 dataLongs = 2;
    repeated double dataDoubles = 3;
    repeated int32 dataIntegers = 4;
    repeated bool dataBooleans = 5;
    repeated StringList dataStringLists = 6;
    repeated LongList dataLongLists = 7;
    repeated DoubleList dataDoubleLists = 8;
    repeated IntegerList dataIntegerLists = 9;
}

message Empty {
}

message StringList {
    repeated string value = 1;
}

message LongList {
    repeated int64 value = 1;
}

message DoubleList {
    repeated double value = 1;
}

message IntegerList {
    repeated int32 value = 1;
}